--- a/typress/app/frontend/index.html
+++ b/typress/app/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Typress</title>
   </head>
   <body>
-    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@myriaddreamin/typst.ts/dist/esm/contrib/all-in-one-lite.bundle.js" id="typst"></script>
+    <div id="app"></div>
   </body>
 </html>
