feat: new frontend

--- a/typress/app/frontend/index.html
+++ b/typress/app/frontend/index.html
@@ -8,6 +8,9 @@
   <body>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@myriaddreamin/typst.ts/dist/esm/contrib/all-in-one-lite.bundle.js" id="typst"></script>
+    <script>
+      window.API_ROOT = "{{ api_root }}";
+    </script>
     <div id="app"></div>
   </body>
 </html>
