--- a/typress/app/frontend/index.html
+++ b/typress/app/frontend/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script type="module" src="/src/main.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@myriaddreamin/typst.ts/dist/esm/contrib/all-in-one-lite.bundle.js" id="typst"></script>
+    <script type="module" src="/js/all-in-one-lite.bundle.js" id="typst"></script>
     <script>
       window.API_ROOT = "{{ api_root }}";
     </script>
